Updated descriptions to bullet points
Description
1, Updated descriptions to bullet points

--- a/index.html
+++ b/index.html
@@ -332,22 +332,29 @@
     <div class="card">
       <div class="row">
         <div class="col-md-3 bg-primary" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500">
-          <div class="card-body cc-experience-header">
+          <div class="card-body cc-experience-header c-p">
             <p>2017 - 2021</p>
             <div class="h5">Contus + Pixint</div>
           </div>
         </div>
         <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
           <div class="card-body">
-              <p>Experience in developing applications and solutions for a wide range of corporate and public sector clients.
-                Proficient in layout, design and coding of websites specifically in Typescript and Javascript format.
-                Possessing scripts using typescript programming language, Javascript, MySQL and NoSQL Server database. 
-                Responsible for liaising with clients and ensuring that all work carried out complies with standards and 
-                guidelines. Developed software using cutting edge technologies like Cloud (PCF), CI/CD, POCs, SonarQube. 
-                Embraced software development from design to release in an Agile development framework.
-                Currently working on Frontend development especially in Angular Framework - version 9 and NodeJs
-                in server side. Interested to work more on Frontend development and to learn New upcoming technologies.
-              </p>
+            <ul>
+              <li>Experience in developing applications and solutions for a wide range of corporate and public sector clients.</li>
+              <li>Proficient in coding of websites specifically in Typescript and Javascript format.</li>
+              <li>Possessing scripts using typescript programming language, Javascript, MySQL and NoSQL Server database.</li>
+              <li>Responsible for liaising with clients and ensuring that all work carried out complies with standards and 
+                guidelines.</li>
+              <li>Developed software using cutting edge technologies like CI/CD, POCs, SonarQube.</li>
+              <li>Embraced software development from design to release in an Agile development framework.</li>
+              <li>Hands on experience with Restful APIs and a Microservices architecture.</li>
+              <li>Basic knowledge on cloud orchestrations such as docker and kubernetes.</li>
+              <li>Experience working in Agile/Scrum development environments.</li>
+              <li>Good knowledge and hands-on on TDD with Unit Testing and available Test Frameworks like Jasmine and Karma.</li>
+              <li>Currently working on Frontend development especially in Angular Framework - version 9 and NodeJs
+                in server side.</li>
+              <li>Interested to work more on Frontend development, Javascript frameworks and to learn New upcoming technologies.</li>
+            </ul>
           </div>
         </div>
       </div>
@@ -360,7 +367,7 @@
     <div class="card">
       <div class="row">
         <div class="col-md-3 bg-primary" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500">
-          <div class="card-body cc-experience-header">
+          <div class="card-body cc-experience-header csip">
             <p>Jan 2021 - Present</p>
             <div class="h5">Contus Support Interactive Pvt Ltd</div>
           </div>
@@ -368,9 +375,17 @@
         <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
           <div class="card-body">
             <div class="h5">Application Developer</div>
-              <p> Integrating Angular frontend. Developing the product from the scratch. Experience in analysing and handling NPM Packages. Involved in the Software Life Cycle phases like AGILE.
-              Implementing Micro Services with Node js. Implementing Swagger REST API. Extensive in developing Generic solutions and reusable code libraries. Creating Progressive Web aplications. Integrating Various Payment Gateways like Paypal, Razorpay, Stripe etc.,
-              </p>
+              <ul>
+                <li>Integrating Angular frontend</li>
+                <li>Developing the product from the scratch</li>
+                <li>Experience in analysing and handling NPM Packages</li>
+                <li>Involved in the Software Life Cycle phases like AGILE</li>
+                <li>Implementing Micro Services with Node js</li>
+                <li>Implementing Swagger REST API</li>
+                <li>Extensive in developing Generic solutions and reusable code libraries</li>
+                <li>Creating Progressive Web aplications</li>
+                <li>Integrating Various Payment Gateways like Paypal, Razorpay, Stripe etc.,</li>
+              </ul>
           </div>
         </div>
       </div>
@@ -378,7 +393,7 @@
     <div class="card">
       <div class="row">
         <div class="col-md-3 bg-primary" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500">
-          <div class="card-body cc-experience-header">
+          <div class="card-body cc-experience-header pgpl">
             <p>May 2017 - Jan 2019</p>
             <div class="h5">Pixint Graphics Pvt Ltd</div>
           </div>
@@ -386,13 +401,18 @@
         <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
           <div class="card-body">
             <div class="h5">Associate Consultant Software Developer</div>
-              <p>Experience in developing applications and solutions for a wide range of corporate, charity and public sector clients.
-                  Proficient in layout, design and coding of websites specifically in PHP and Javascript format.
-                  Possessing scripts using PHP programming and Javascript language and MySQL Server database.
-                  Responsible for liaising with clients and ensuring that all work carried out complies with standards and guidelines. 
-                  Currently working on Angular 5, Laravel 5.
-                  Interested to work more on Angular and to learn New upcoming technologies.
-              </p>
+              <ul>
+                <li>Integrating Angular, Laravel and Codeigniter frameworks</li>
+                <li>Creating REST API's using Laravel</li>
+                <li>Created Product Management, Category Management and Order Management CMS</li>
+                <li>Responsible for developing the E-Commerce applications from the scratch</li>
+                <li>Developed the CART management CMS using CodeIgniter framework</li>
+                <li>Created Employee Management Tool in an ERP application</li>
+                <li>Executed PDF creation using DomPDF and FPDF libraries in php</li>
+                <li>Implementing Swagger REST API Documentation</li>
+                <li>Responsible for executing queries in MySQL</li>
+                <li>Involved in various Brain-Storming discussions for Module Development</li>
+              </ul>
           </div>
         </div>
       </div>
@@ -406,7 +426,7 @@
     <div class="card">
       <div class="row">
         <div class="col-md-3 bg-primary" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500">
-          <div class="card-body cc-education-header">
+          <div class="card-body cc-education-header gud-header">
             <div class="h5">GUDSHO</div>
             <p>OTT Product</p>
           </div>
@@ -415,7 +435,25 @@
           <div class="card-body">
             <div class="h5">India's Pay Per View OTT Platform</div>
             <p class="category">India</p>
-            <p>Integrated Angular Server Side Rendering (SSR) using Angular Universal. Implemented Lexo Rank Algorithm for sorting logics. Integrated Google Firebase OTP Login. Executed One Signal Push Notifications. Handled Big Data using Cassandra DB. Customized Plyr player and integrated Transcoding, Thumbnail, Presets, Subtitle and Audio Languages. Created both Audio and Video player. Integrated Geo-Restrictions. Monetization model of Pay-Per-View has been integrated with validity. Implemented Progressive Web Application (PWA). Executed social share like Facebook, Google, Twitter and Whatsapp. Executed social login with Google and Facebook. Created reusable library in order to maintain code standards. Implemented Angular Material UI designs for both frontend and backend. Implemented RXJS Observables for maintaining states. Integrated ngx-uploadx library for Video Upload. Google Drive Model Popup for Showing Upload Status. Razorpay payment gateway Integrated. Implemented TDD in Angular using Karma and Jasmine frameworks. Implemented TDD in Node JS using Mocha framework. Created REST API swagger documentation.</p>
+            <ul>
+              <li>Integrated Angular Server Side Rendering (SSR) using Angular Universal</li>
+              <li>Integrated Google Firebase Phone Number OTP Login</li>
+              <li>Implemented Push Notifications using One Signal</li>
+              <li> Customized Plyr player and integrated Transcoding, Thumbnail, Presets, Subtitle and Audio Languages</li>
+              <li> Created both Audio and Video player</li>
+              <li>Integrated Geo-Restrictions. Monetization model of Pay-Per-View has been integrated with validity</li>
+              <li>Implemented Progressive Web Application (PWA)</li>
+              <li>Executed social share like Facebook, Google, Twitter and Whatsapp</li>
+              <li>Executed social login with Google and Facebook</li>
+              <li>Created reusable library in order to maintain code standards</li>
+              <li>Implemented Angular Material UI designs for both frontend and backend</li>
+              <li>Implemented RXJS Observables for maintaining states</li>
+              <li>Integrated ngx-uploadx library for Video Upload</li>
+              <li>Razorpay payment gateway Integrated</li>
+              <li>Implemented TDD in Angular using Karma and Jasmine frameworks</li>
+              <li>Implemented TDD in Node JS using Mocha framework</li>
+              <li>Created REST API swagger documentation</li>
+            </ul>
           </div>
         </div>
       </div>
@@ -423,7 +461,7 @@
     <div class="card">
       <div class="row">
         <div class="col-md-3 bg-primary" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500">
-          <div class="card-body cc-education-header">            
+          <div class="card-body cc-education-header vplayed-header">            
             <div class="h5">VPlayed</div>
             <p>OTT Streaming Solution</p>
           </div>
@@ -432,8 +470,23 @@
           <div class="card-body">
             <div class="h5">OTT Streaming Solution</div>
             <p class="category">India</p>
-            <p>Integrated the Progressive Web Application in the product.Integrated the service worker for browser caching and offline mode purpose. Implemented Video JS video player with AWS elastic-transcoding, etc., Customized the Video player with thumbnail, presets, subtitle and audio language. Device and Login restriction, Geo-restriction, X-Ray modes has been added. Used translation library for language interchange. Created the audio site for the product from the scratch. Executed Audio Player from video js with AWS elastic-transcoding, etc., Integrated Lazy Loading. Executed custom directives such as, AllowOnlyNumbers and BlockCopyPaste directives. Integrated State management services using RXJS Observables. Integrated Social login Google, Facebook. Consolidated Social share as well for Google, Facebook and Twitter. Integrated the paywall concept such as SVOD, TVOD and AVOD. PAYPAL payment gateway integrated. Executed Wowza live streaming server and on-premises. Integrated Laravel Scheduler for On time video publishing. Implemented tslint and sonarlint library to avoid duplication of codes and to strictly follow the oops concept.
-            </p>
+            <ul>
+              <li>Implemented the Progressive Web Application in the product</li>
+              <li>Integrated the service worker for browser caching and offline mode purpose</li>
+              <li>Implemented Video JS video player with AWS elastic-transcoding, etc.,</li>
+              <li>Customized the Video player with thumbnail, presets, subtitle and audio language</li>
+              <li>Device, Login and Geo-restriction, X-Ray modes has been added in the player</li>
+              <li>Used translation library for language interchange</li>
+              <li>Created the audio site for the product from the scratch</li>
+              <li>Executed Audio Player from video js with AWS elastic-transcoding, etc.,</li>
+              <li>Integrated Angular Lazy Loading</li>
+              <li>Executed custom directives such as, AllowOnlyNumbers and BlockCopyPaste directives.</li>
+              <li>Integrated State management services using RXJS Observables</li>
+              <li>Integrated Social login Google, Facebook</li>
+              <li>Integrated the paywall concept such as SVOD, TVOD and AVOD</li>
+              <li>Integrated Laravel Scheduler for On time video publishing</li>
+              <li>Implemented tslint and sonarlint library to avoid duplication of codes and to strictly follow the oops concept</li>
+            </ul>
           </div>
         </div>
       </div>
@@ -441,7 +494,7 @@
     <div class="card">
       <div class="row">
         <div class="col-md-3 bg-primary" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500">
-          <div class="card-body cc-education-header">            
+          <div class="card-body cc-education-header vpfr">            
             <div class="h5">VPlayed - Audio</div>
             <p>OTT Audio Streaming Solution</p>
           </div>
@@ -450,10 +503,18 @@
           <div class="card-body">
             <div class="h5">OTT Audio Streaming Solution</div>
             <p class="category">India</p>
-            <p>Angular 8, Node, Laravel, Express JS, MongoDB, MySQL,
+            <ul>
+              <li>Inherits all the points of VPlayed</li>
+            </ul>
+            <p style="font-weight: bold;">
+              <u>Technologies Used</u>
+            </p>
+            <p>
+              Angular 8, Node, Laravel, Express JS, MongoDB, MySQL,
               GitHub, Elastic Search, Elastic Transcoding, FFMPEG, 
               Google server side ADS, Redis, Apache Kafka, Express API Gateway,
-              MicroServices, Angular Material Design, JIRA, Docker.</p>
+              MicroServices, Angular Material Design, JIRA, Docker.
+            </p>
           </div>
         </div>
       </div>
@@ -461,7 +522,7 @@
     <div class="card">
       <div class="row">
         <div class="col-md-3 bg-primary" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500">
-          <div class="card-body cc-education-header">            
+          <div class="card-body cc-education-header vpfr">            
             <div class="h5">FRUIT RANCH</div>
             <p>E-Commerce Website</p>
           </div>
@@ -470,8 +531,13 @@
           <div class="card-body">
             <div class="h5">E-Commerce Website and Application</div>
             <p class="category">United States</p>
-            <p>This project is completely based on United States E-Commerce services. Here we sell fruits baskets, Gift baskets, Occasional Gifts etc., through online using the payment gateway as PAYPAL. This site is quite impressive from the other ecommerce websites. Here we guide you through step by step process for purchasing a product where you will feel more impressive and comfortable that will make you to come again and purchase.
-            </p>
+            <ul>
+              <li>This project is completely based on United States E-Commerce services</li>
+              <li>Here they sell fruits baskets, Gift baskets, Occasional Gifts etc.,</li>
+              <li>Integrated payment gateway as PAYPAL</li>
+              <li>This site is quite impressive from the other ecommerce websites</li>
+              <li>Here we guide you through step by step process for purchasing a product where you will feel more impressive and comfortable that will make you to come again and purchase</li>
+            </ul>
           </div>
         </div>
       </div>
@@ -488,10 +554,12 @@
           <div class="card-body">
             <div class="h5">An integral Royal Enfield showroom - Website</div>
             <p class="category">India</p>
-            <p>This system welcomes the users with the gigantic menu with the
-              display of categories of their exquisite vehicles. It provides great
-              user experience. It also consists of Impeccable Vehicle Display, & 
-              Superlative Booking & Service Form.</p>
+            <ul>
+              <li>This system welcomes the users with the gigantic menu with the
+                display of categories of their exquisite vehicles</li>
+              <li> It provides great user experience. It also consists of Impeccable Vehicle Display, & 
+                Superlative Booking & Service Form.</li>
+            </ul>
           </div>
         </div>
       </div>
