Removed unwanted text
Description
1, Removed unwanted text

--- a/index.html
+++ b/index.html
@@ -582,7 +582,7 @@
             <div class="h5">Master of Science in Computer Science</div>
             <p class="category">The New College - chennai</p>
           </div>
-        </div>co
+        </div>
       </div>
     </div>
     <div class="card">
