Updated the resume

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
       <div class="page-header-image" data-parallax="true" style="background-image: url('images/889210.png');"></div>
       <div class="container">
         <div class="content-center">
-          <div class="cc-profile-image"><a href="#"><img src="images/asif.JPG" alt="Image"/></a></div>
+          <div class="cc-profile-image"><a href="#"><img src="images/Asif-1.JPG" alt="Image"/></a></div>
           <div class="h2 title">Mohamed Asif</div>
           <p class="category text-white" style="text-align: center !important;">Software Developer</p><a class="btn btn-primary smooth-scroll mr-2" href="#contact" data-aos="zoom-in" data-aos-anchor="data-aos-anchor">Hire Me</a><a class="btn btn-primary" href="documents/Asif_cv.pdf" data-aos="zoom-in" data-aos-anchor="data-aos-anchor" download>Download CV</a>
         </div>
@@ -54,8 +54,8 @@
       <div class="section">
         <div class="container">
           <div class="button-container">
-            <a class="btn btn-default btn-round btn-lg btn-icon" href="https://twitter.com/Aasif071" target="_blank" rel="tooltip" title="Follow me on Twitter" target="_blank"><i class="fa fa-twitter"></i></a>
-            <a class="btn btn-default btn-round btn-lg btn-icon" href="https://www.linkedin.com/in/mohamed-asif-81391313b/" target="_blank" rel="tooltip" title="Follow me linked in"><i class="fa fa-linkedin-square"></i></a>
+            <a class="btn btn-default btn-round btn-lg btn-icon" href="https://github.com/AsifDeveloper" target="_blank" rel="tooltip" title="Follow me on Github" target="_blank"><img src="images/github.png" class="linked-in-icon"></a>
+            <a class="btn btn-default btn-round btn-lg btn-icon" href="https://www.linkedin.com/in/mohamed-asif-81391313b/" target="_blank" rel="tooltip" title="Follow me on linked in"><img src="images/linkedin.png" class="linked-in-icon"></img></a>
             
         </div>
       </div>
@@ -70,10 +70,10 @@
           <div class="card-body">
             <div class="h4 mt-0 title">About</div>
             <p>Hello! I am Mohamed Asif. Sofware Developer.</p>
-            <p>I am highly resourceful, innovative, skillful and competent MEAN Stack Developer with 3 year 8 months of 
-              experience in the field of Web/Software development. Working with Designers, Frontend and Product management
-              staff to capture requirements for the functional elements of website projects. I have immense knowledge in
-              Product development & OTT platform.</p>
+            <p>I am a highly resourceful, innovative, skillful, and competent MEAN stack developer with
+              6 year and 7 months of  experience in the field
+              of Web/Software development. Working with 
+              Designers, Frontend and Product management staff and Clients to capture requirements for the functional elements of the website projects. I have immense knowledge in Product development, OTT platform and TTH applications.</p>
           </div>
         </div>
         <div class="col-lg-6 col-md-12">
@@ -126,7 +126,7 @@
           <div class="col-md-6">
             <div class="progress-container progress-primary"><span class="progress-badge">Node</span>
               <div class="progress">
-                <div class="progress-bar progress-bar-primary" data-aos="progress-full" data-aos-offset="10" data-aos-duration="2000" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 60%;"></div><span class="progress-value">60%</span>
+                <div class="progress-bar progress-bar-primary" data-aos="progress-full" data-aos-offset="10" data-aos-duration="2000" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 75%;"></div><span class="progress-value">75%</span>
               </div>
             </div>
           </div>
@@ -142,7 +142,7 @@
           <div class="col-md-6">
             <div class="progress-container progress-primary"><span class="progress-badge">Microservices</span>
               <div class="progress">
-                <div class="progress-bar progress-bar-primary" data-aos="progress-full" data-aos-offset="10" data-aos-duration="2000" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 60%;"></div><span class="progress-value">60%</span>
+                <div class="progress-bar progress-bar-primary" data-aos="progress-full" data-aos-offset="10" data-aos-duration="2000" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 75%;"></div><span class="progress-value">75%</span>
               </div>
             </div>
           </div>
@@ -156,23 +156,7 @@
         </div>
         <div class="row">
           <div class="col-md-6">
-            <div class="progress-container progress-primary"><span class="progress-badge">Laravel</span>
-              <div class="progress">
-                <div class="progress-bar progress-bar-primary" data-aos="progress-full" data-aos-offset="10" data-aos-duration="2000" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100" style="width: 70%;"></div><span class="progress-value">70%</span>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-6">
-            <div class="progress-container progress-primary"><span class="progress-badge">CodeIgniter</span>
-              <div class="progress">
-                <div class="progress-bar progress-bar-primary" data-aos="progress-full" data-aos-offset="10" data-aos-duration="2000" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100" style="width: 50%;"></div><span class="progress-value">50%</span>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-md-6">
-            <div class="progress-container progress-primary"><span class="progress-badge">MySQL</span>
+            <div class="progress-container progress-primary"><span class="progress-badge">SQL</span>
               <div class="progress">
                 <div class="progress-bar progress-bar-primary" data-aos="progress-full" data-aos-offset="10" data-aos-duration="2000" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 60%;"></div><span class="progress-value">60%</span>
               </div>
@@ -181,26 +165,26 @@
           <div class="col-md-6">
             <div class="progress-container progress-primary"><span class="progress-badge">MongoDB</span>
               <div class="progress">
-                <div class="progress-bar progress-bar-primary" data-aos="progress-full" data-aos-offset="10" data-aos-duration="2000" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100" style="width: 50%;"></div><span class="progress-value">50%</span>
+                <div class="progress-bar progress-bar-primary" data-aos="progress-full" data-aos-offset="10" data-aos-duration="2000" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100" style="width: 75%;"></div><span class="progress-value">75%</span>
               </div>
             </div>
           </div>
         </div>
         <div class="row">
           <div class="col-md-6">
+            <div class="progress-container progress-primary"><span class="progress-badge">AWS</span>
+              <div class="progress">
+                <div class="progress-bar progress-bar-primary" data-aos="progress-full" data-aos-offset="10" data-aos-duration="2000" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width: 60%;"></div><span class="progress-value">60%</span>
+              </div>
+            </div>
+          </div>   
+          <div class="col-md-6">
             <div class="progress-container progress-primary"><span class="progress-badge">Docker</span>
               <div class="progress">
                 <div class="progress-bar progress-bar-primary" data-aos="progress-full" data-aos-offset="10" data-aos-duration="2000" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width: 40%;"></div><span class="progress-value">40%</span>
               </div>
             </div>
-          </div>
-          <div class="col-md-6">
-            <div class="progress-container progress-primary"><span class="progress-badge">Kubernetes</span>
-              <div class="progress">
-                <div class="progress-bar progress-bar-primary" data-aos="progress-full" data-aos-offset="10" data-aos-duration="2000" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width: 40%;"></div><span class="progress-value">40%</span>
-              </div>
-            </div>
-          </div>          
+          </div>        
         </div>
         <div class="row">
           <div class="col-md-6">
@@ -241,7 +225,7 @@
             <div class="col-md-6">
               <div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom">
                 <a href="#web-development">
-                  <a target="_blank" href="https://uat.gudsho.com/">
+                  <a target="_blank" href="https://gudsho.com/">
                     <figure class="cc-effect"><img src="images/gudsho.png" alt="Image" />
                       <figcaption>
                         <div class="h4">OTT Product</div>
@@ -253,11 +237,11 @@
               </div>
               <div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom">
                 <a href="#web-development">
-                  <a target="_blank" href="http://demo.audio.vplayed.com/">
-                    <figure class="cc-effect"><img src="images/vplayed_audio.png" alt="Image" />
+                  <a target="_blank" href="https://movepro360.cartus.com/">
+                    <figure class="cc-effect"><img src="images/MovePro360.png" alt="Image" />
                       <figcaption>
-                        <div class="h4">OTT Audio Streaming Solution</div>
-                        <p>VPlayed</p>
+                        <div class="h4">MovePro360</div>
+                        <p>TTH</p>
                       </figcaption>
                     </figure>
                   </a>
@@ -267,7 +251,7 @@
             <div class="col-md-6">
               <div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom">
                 <a href="#web-development">
-                  <a target="_blank" href="https://demo.eks.vplayed.com/">
+                  <a target="_blank" href="https://demogs.vplayed.com/">
                     <figure class="cc-effect"><img src="images/Vplayed.png" alt="Image" />
                       <figcaption>
                         <div class="h4">OTT Streaming Solution</div>
@@ -279,11 +263,11 @@
               </div>
               <div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom">
                 <a href="#web-development">
-                  <a target="_blank" href="https://www.skempi.com/">
-                    <figure class="cc-effect"><img src="images/vplayed_skempi.png" alt="Image" />
+                  <a target="_blank" href="https://benefitsbuilder.cartus.com/">
+                    <figure class="cc-effect"><img src="images/Benefits Builder.png" alt="Image" />
                       <figcaption>
-                        <div class="h4">OTT Audio Streaming Solution</div>
-                        <p>Skempi</p>
+                        <div class="h4">Benefits Builder</div>
+                        <p>TTH</p>
                       </figcaption>
                     </figure>
                   </a>
@@ -333,14 +317,15 @@
       <div class="row">
         <div class="col-md-3 bg-primary" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500">
           <div class="card-body cc-experience-header c-p">
-            <p>2017 - 2021</p>
-            <div class="h5">Contus + Pixint</div>
+            <p>2017 - 2024</p>
+            <div class="h5">LTIMindtree + Contus + Pixint</div>
           </div>
         </div>
         <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
           <div class="card-body">
             <ul>
-              <li>Experience in developing applications and solutions for a wide range of corporate and public sector clients.</li>
+              <li>Experienced in leading a development team.</li>
+              <li>Experience in developing applications and solutions for a wide range of corporate and public sector clients.</li>              
               <li>Proficient in coding of websites specifically in Typescript and Javascript format.</li>
               <li>Possessing scripts using typescript programming language, Javascript, MySQL and NoSQL Server database.</li>
               <li>Responsible for liaising with clients and ensuring that all work carried out complies with standards and 
@@ -351,9 +336,10 @@
               <li>Basic knowledge on cloud orchestrations such as docker and kubernetes.</li>
               <li>Experience working in Agile/Scrum development environments.</li>
               <li>Good knowledge and hands-on on TDD with Unit Testing and available Test Frameworks like Jasmine and Karma.</li>
-              <li>Currently working on Frontend development especially in Angular Framework - version 9 and NodeJs
+              <li>Currently working on MEAN stack development especially in Angular - version 14 and NodeJs - Version 18
                 in server side.</li>
-              <li>Interested to work more on Frontend development, Javascript frameworks and to learn New upcoming technologies.</li>
+              <li>Interested to work more on new languages and technologies which falls
+                under JS and TS.</li>
             </ul>
           </div>
         </div>
@@ -369,7 +355,36 @@
         <div class="col-md-3 bg-primary" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500">
           <div class="card-body cc-experience-header csip">
             <p>Jan 2021 - Present</p>
-            <div class="h5">Contus Support Interactive Pvt Ltd</div>
+            <div class="h5">LTIMindtree</div>
+          </div>
+        </div>
+        <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
+          <div class="card-body">
+            <div class="h5">SPECIALIST - MODULE LEAD</div>
+              <ul>
+                <li>Led a team of 7 engineers on a migration of an existing legacy
+                  (.NET) application into a modernized MEAN stack application.</li>
+                <li>Built an improvised Co-Existence Node JS Microservices in order to
+                  communicate the data from legacy application which uses SQL to
+                  modern web application which uses Mongo DB.</li>
+                <li>Held 3 internal workshops on Gen AI, Co-Pilot and current
+                  regulatory practices, enhancing team knowledge.</li>
+                <li>Automated 4 housekeeping activities using Microsoft Power
+                  Automate.</li>
+                <li>Developed and implemented standardized coding practices across
+                  the development team, resulting in fewer bugs and improved
+                  software stability.</li>
+              </ul>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="card">
+      <div class="row">
+        <div class="col-md-3 bg-primary" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500">
+          <div class="card-body cc-experience-header csip">
+            <p>Jan 2019 - Jan 2021</p>
+            <div class="h5">Contus Tech</div>
           </div>
         </div>
         <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
