--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
       <div class="page-header-image" data-parallax="true" style="background-image: url('images/889210.png');"></div>
       <div class="container">
         <div class="content-center">
-          <div class="cc-profile-image"><a href="#"><img src="images/Asif-1.JPG" alt="Image"/></a></div>
+          <div class="cc-profile-image"><a href="#"><img src="images/asif.jpg" alt="Image"/></a></div>
           <div class="h2 title">Mohamed Asif</div>
           <p class="category text-white" style="text-align: center !important;">Software Developer</p><a class="btn btn-primary smooth-scroll mr-2" href="#contact" data-aos="zoom-in" data-aos-anchor="data-aos-anchor">Hire Me</a><a class="btn btn-primary" href="documents/Asif_cv.pdf" data-aos="zoom-in" data-aos-anchor="data-aos-anchor" download>Download CV</a>
         </div>
